# pyflow

./: .gitignore  .mcp.json.bak  CLAUDE.md  README.md  README.zh-CN.md  coverage.json  pyproject.toml
.claude/agents/: pyflow-architect-review.md  pyflow-code-reviewer.md  pyflow-fastapi-pro.md  pyflow-frontend-developer.md  pyflow-go-build-resolver.md  pyflow-go-pro.md  pyflow-go-reviewer.md  pyflow-python-pro.md  pyflow-security-auditor.md  pyflow-test-automator.md  pyflow-typescript-performance-engineer.md  pyflow-typescript-pro.md
.claude/commands/: pyflow-constitution.md  pyflow-tdd-cycle.md
.claude/skills/projectflow-executor/: SKILL.md  SKILL.md.bak
.claude/skills/projectflow-planner/: SKILL.md
.claude/skills/projectflow-router/: SKILL.md
.claude/skills/pyflow-async-python-patterns/: SKILL.md
.claude/skills/pyflow-brainstorming/: SKILL.md
.claude/skills/pyflow-finishing-a-development-branch/: SKILL.md
.claude/skills/pyflow-golang-patterns/: SKILL.md
.claude/skills/pyflow-golang-testing/: SKILL.md
doc/: 这个项目的本意是测试python project.txt  重新进行梳理 Phase 0 需求互动 这个环节无论简单或者复杂都需要.txt  项目策划师 头脑风暴 确定技术需求 明确新项目还是新增功能.txt
docs/: projectflow-workflow.md  three-scenarios-workflow.md
docs/command2skill/: COMMAND-SKILL-TRANSFORMATION-GUIDE.md  TDD-CYCLE-TRANSFORMATION-SUMMARY.md  TRANSFORMATION-EXPERIENCE-SUMMARY.md
pjflow/: constitution.md
pjflow/v0_initial/: CHECKLIST.md  compliance_report.md  progress.md  requirements.md  task_plan.md
src/file_counter/: __init__.py  __main__.py  cli.py  counter.py
tests/: __init__.py  test_counter.py
(+44 files in other folders)
