[project]
name = "file-counter"
version = "0.1.0"
description = "文件计数器工具 - 统计目录下的文件数量，按扩展名分类"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
]

[project.scripts]
file-counter = "file_counter.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
